fix: add `flex-wrap` to `recharts-default-legend` when under `historic-chart-2`

--- a/front-end-components/src/composed/historic-chart-2-composed/styles.scss
+++ b/front-end-components/src/composed/historic-chart-2-composed/styles.scss
@@ -1,3 +1,3 @@
-.historic-chart-2 .recharts-legend-item { 
-  white-space: normal !important; 
+.historic-chart-2 .recharts-default-legend { 
+  flex-wrap: wrap; 
 }
